--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "bulma": "^0.4.2",
     "currency-formatter": "^1.2.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "redux": "^3.6.0",
