--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
