--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.6.0",
     "styled-components": "^2.1.0"
   },
