--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.6.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "styled-components": "^2.1.0"
   },
   "devDependencies": {
