--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.4.2",
+    "crypto-socket": "^1.0.8",
     "currency-formatter": "^1.2.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
@@ -15,10 +16,12 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "react-websocket": "^1.1.7",
     "redux": "^3.6.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
-    "styled-components": "^2.1.0"
+    "styled-components": "^2.1.0",
+    "ws": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^3.17.1",
