--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "react-vis": "^1.7.4",
     "redux": "^3.6.0",
     "styled-components": "^2.1.0"
   },
