--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.1.2",
     "react-vis": "^1.7.4",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
     "styled-components": "^2.1.0"
   },
   "devDependencies": {
