--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bulma": "^0.4.2",
+    "bulma": "^0.5.3",
     "currency-formatter": "^1.2.1",
+    "enzyme-to-json": "^3.1.2",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-fontawesome": "^1.6.1",
-    "react-redux": "^5.0.5",
+    "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "react-test-renderer": "^16.0.0",
     "react-vis": "^1.7.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "styled-components": "^2.1.0"
   },
   "devDependencies": {
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
