--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^6.10.0",
     "react-scripts": "1.0.7"
   },
