--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "bulma": "^0.5.3",
     "currency-formatter": "^1.2.1",
-    "enzyme-to-json": "^3.1.2",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
@@ -16,10 +15,8 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-test-renderer": "^16.0.0",
     "react-vis": "^1.7.4",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.6",
     "styled-components": "^2.1.0"
   },
   "devDependencies": {
@@ -28,9 +25,11 @@
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "^7.4.0",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "react-test-renderer": "^16.0.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
