--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^2.1.0"
   },
   "devDependencies": {
+    "deep-freeze": "^0.0.1",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^4.8.0",
@@ -29,7 +30,8 @@
     "eslint-plugin-react": "^7.4.0",
     "react-scripts": "1.0.7",
     "react-test-renderer": "^16.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
