--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "dependencies": {
     "bulma": "^0.5.3",
     "currency-formatter": "^1.2.1",
-    "font-awesome": "^4.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
     "orama": "^1.4.1",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
@@ -27,7 +26,6 @@
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "^7.4.0",
     "react-scripts": "1.0.7",
     "react-test-renderer": "^16.0.0",
