--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "bulma": "^0.5.3",
     "currency-formatter": "^1.2.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -15,6 +16,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.1.0"
   },
   "devDependencies": {
